--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+sqlx = { version = "0.8", features = ["postgres"]}
 
 [dev-dependencies]
 reqwest = "0.13"
