--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,19 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
-sqlx = { version = "0.8", features = ["postgres"]}
+config = "0.15.19"
+
+[dependencies.sqlx]
+version = "0.8"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.13"
