--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
 config = "0.15.19"
+uuid = { version = "1.20.0", features = ["v4"] }
+chrono = "0.4.43"
 
 [dependencies.sqlx]
 version = "0.8"
