--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -10,7 +10,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   SQLX_VERSION: "^0.8"
-  SQLX_FEATURES: "rustls,postgres"
+  SQLX_FEATURES: "rustls,postgres,macros,uuid,chrono,migrate"
   APP_USER: app
   APP_USER_PWD: secret
   APP_DB_NAME: newsletter
